singularity/jobs/error2284338.err
  File "/corticalflow/predict.py", line 269
    c            print('\n*********before pial model() \n', printSpaceUsage())
                     ^
SyntaxError: invalid syntax
